ready for deployement

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         // JavaScript code to handle the API request and display the results
         function getShayari() {
             const keyword = document.getElementById('keywordInput').value;
-            const baseURL = "http://localhost:8000";
+            const baseURL = "https://ai-shayari-generator.onrender.com/";
 
             // Make an API request to the backend to get the shayari
             // You can use Fetch or Axios to make the HTTP request
